[package]
name = "termimage-editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.26.1"
serde = "1.0"
serde_yaml = "0.9"
csv = "1.2.1"
clap = { version = "4.2.1", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0.40"
num-traits = "0.2.15"
